lets try this again...

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
     <div id="video-container">
       <!-- Replace 'your-video-source' with the actual video source -->
       <video width="400" controls>
-        <source src="mp4-sources/computerscience.mp4" type="video/mp4">
+        <source src="mp4-sources\computerscience.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
