uploaded signs- code, computerScience, decimal, decode, download, encrypt, equals

--- a/public/index.html
+++ b/public/index.html
@@ -92,12 +92,15 @@
       <li><button onclick="selectSign('byte')">Byte</button></li>
       <li><button onclick="selectSign('class')">Class</button></li>
       <li><button onclick="selectSign('computerscience')">Computer_Science</button></li>
+      <li><button onclick="selectSign('code')">Code</button></li>
       <li><button onclick="selectSign('cybersecurity')">Cybersecurity</button></li>
       <li><button onclick="selectSign('debug')">Debug</button></li>
       <li><button onclick="selectSign('decimal')">Decimal</button></li>
+      <li><button onclick="selectSign('decode')">Decode</button></li>
       <li><button onclick="selectSign('division')">Division</button></li>
       <li><button onclick="selectSign('double')">Double</button></li>
       <li><button onclick="selectSign('download')">Download</button></li>
+      <li><button onclick="selectSign('encrypt')">Encrypt</button></li>
       <li><button onclick="selectSign('equals')">Equals</button></li>
       <li><button onclick="selectSign('float')">Float</button></li>
       <li><button onclick="selectSign('hexadecimal')">Hexadecimal</button></li>
