refactored sign list to reflect current sign list

--- a/public/index.html
+++ b/public/index.html
@@ -87,34 +87,43 @@
       <li><button onclick="selectSign('algorithm')">Algorithm</button></li>
       <li><button onclick="selectSign('alphabet')">Alphabet</button></li>
       <li><button onclick="selectSign('binary')">Binary</button></li>
-      <li><button onclick="selectSign('bit')">Bit</button></li>
       <li><button onclick="selectSign('bug')">Bug</button></li>
-      <li><button onclick="selectSign('byte')">Byte</button></li>
+      <li><button onclick="selectSign('child')">Child</button></li>
       <li><button onclick="selectSign('class')">Class</button></li>
+      <li><button onclick="selectSign('computerinfosys')">Computer Information System</button></li>
       <li><button onclick="selectSign('computerscience')">Computer_Science</button></li>
       <li><button onclick="selectSign('code')">Code</button></li>
-      <li><button onclick="selectSign('cybersecurity')">Cybersecurity</button></li>
+      <li><button onclick="selectSign('cyberattack')">Cyberattack</button></li>
       <li><button onclick="selectSign('debug')">Debug</button></li>
       <li><button onclick="selectSign('decimal')">Decimal</button></li>
       <li><button onclick="selectSign('decode')">Decode</button></li>
       <li><button onclick="selectSign('division')">Division</button></li>
-      <li><button onclick="selectSign('double')">Double</button></li>
       <li><button onclick="selectSign('download')">Download</button></li>
       <li><button onclick="selectSign('encrypt')">Encrypt</button></li>
       <li><button onclick="selectSign('equals')">Equals</button></li>
-      <li><button onclick="selectSign('float')">Float</button></li>
-      <li><button onclick="selectSign('hexadecimal')">Hexadecimal</button></li>
+      <li><button onclick="selectSign('inequals')">Inequals</button></li>
       <li><button onclick="selectSign('integer')">Integer</button></li>
       <li><button onclick="selectSign('internet')">Internet</button></li>
+      <li><button onclick="selectSign('laptop')">Laptop</button></li>
+      <li><button onclick="selectSign('loop')">Loop</button></li>
       <li><button onclick="selectSign('math')">Math</button></li>
       <li><button onclick="selectSign('method')">Method</button></li>
-      <li><button onclick="selectSign('mod')">Mod</button></li>
       <li><button onclick="selectSign('multiplication')">Multiplication</button></li>
+      <li><button onclick="selectSign('node')">Node</button></li>
       <li><button onclick="selectSign('number')">Number</button></li>
+      <li><button onclick="selectSign('object')">Object</button></li>
       <li><button onclick="selectSign('operatingsystem')">Operating_System</button></li>
+      <li><button onclick="selectSign('parent')">Parent</button></li>
       <li><button onclick="selectSign('pi')">PI</button></li>
+      <li><button onclick="selectSign('return')">Return</button></li>
+      <li><button onclick="selectSign('repository')">Repository</button></li>
+      <li><button onclick="selectSign('rubberducky')">Rubber Ducky</button></li>
+      <li><button onclick="selectSign('server')">Server</button></li>
+      <li><button onclick="selectSign('string')">String</button></li>
       <li><button onclick="selectSign('subtraction')">Subtraction</button></li>
+      <li><button onclick="selectSign('unequal')">Unequal</button></li>
       <li><button onclick="selectSign('upload')">Upload</button></li>
+      <li><button onclick="selectSign('virus')">Virus</button></li>
 
 
       <!-- Add more words as needed -->
