added signs: unequal, upload, virus, repository, coding

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
       <li><button onclick="selectSign('computerinfosys')">Computer Information System</button></li>
       <li><button onclick="selectSign('computerscience')">Computer_Science</button></li>
       <li><button onclick="selectSign('code')">Code</button></li>
+      <li><button onclick="selectSign('coding')">Coding</button></li>
       <li><button onclick="selectSign('cyberattack')">Cyberattack</button></li>
       <li><button onclick="selectSign('debug')">Debug</button></li>
       <li><button onclick="selectSign('decimal')">Decimal</button></li>
@@ -101,7 +102,6 @@
       <li><button onclick="selectSign('download')">Download</button></li>
       <li><button onclick="selectSign('encrypt')">Encrypt</button></li>
       <li><button onclick="selectSign('equals')">Equals</button></li>
-      <li><button onclick="selectSign('inequals')">Inequals</button></li>
       <li><button onclick="selectSign('integer')">Integer</button></li>
       <li><button onclick="selectSign('internet')">Internet</button></li>
       <li><button onclick="selectSign('laptop')">Laptop</button></li>
