ForLoop, function and loop

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,8 @@
       <li><button onclick="selectSign('download')">Download</button></li>
       <li><button onclick="selectSign('encrypt')">Encrypt</button></li>
       <li><button onclick="selectSign('equals')">Equals</button></li>
+      <li><button onclick="selectSign('forLoop')">for loop</button></li>
+      <li><button onclick="selectSign('function')">Function</button></li>
       <li><button onclick="selectSign('integer')">Integer</button></li>
       <li><button onclick="selectSign('internet')">Internet</button></li>
       <li><button onclick="selectSign('laptop')">Laptop</button></li>
