Updated word list and finished recording words: child, bug, class, method, object, type

--- a/public/index.html
+++ b/public/index.html
@@ -93,10 +93,9 @@
       <li><button onclick="selectSign('computerscience')">Computer_Science</button></li>
       <li><button onclick="selectSign('code')">Code</button></li>
       <li><button onclick="selectSign('coding')">Coding</button></li>
-      <li><button onclick="selectSign('debug')">Debug</button></li>
       <li><button onclick="selectSign('decimal')">Decimal</button></li>
       <li><button onclick="selectSign('decode')">Decode</button></li>
-      <li><button onclick="selectSign('division')">Division</button></li>
+      <li><button onclick="selectSign('divide')">Divide</button></li>
       <li><button onclick="selectSign('download')">Download</button></li>
       <li><button onclick="selectSign('encrypt')">Encrypt</button></li>
       <li><button onclick="selectSign('equals')">Equals</button></li>
@@ -119,8 +118,8 @@
       <li><button onclick="selectSign('repository')">Repository</button></li>
       <li><button onclick="selectSign('rubberducky')">Rubber Ducky</button></li>
       <li><button onclick="selectSign('server')">Server</button></li>
-      <li><button onclick="selectSign('string')">String</button></li>
       <li><button onclick="selectSign('subtraction')">Subtraction</button></li>
+      <li><button onclick="selectSign('type')">Type</button></li>
       <li><button onclick="selectSign('unequal')">Unequal</button></li>
       <li><button onclick="selectSign('upload')">Upload</button></li>
       <li><button onclick="selectSign('virus')">Virus</button></li>
